<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/ProfilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:adjustViewBounds="true"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/profile_button_photo"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/mydarkblue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:autofillHints="John Wick"
            android:backgroundTint="@color/myorange"
            android:gravity="center"
            android:hint="@string/edit_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/mydarkblue"
            android:textColorHint="@color/myorange" />


        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textColor="@color/mydarkblue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/select_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center" />


        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/mydarkblue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:autofillHints="170"
                android:backgroundTint="@color/myorange"
                android:gravity="center"
                android:hint="@string/edit_height"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:textColor="@color/mydarkblue"
                android:textColorHint="@color/myorange" />

            <TextView
                android:id="@+id/cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm"

                android:textColor="@color/mydarkblue" />
        </LinearLayout>


        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/mydarkblue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:autofillHints="70"
                android:backgroundTint="@color/myorange"
                android:gravity="center"
                android:hint="@string/edit_weight"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:textColor="@color/mydarkblue"
                android:textColorHint="@color/myorange" />

            <TextView
                android:id="@+id/kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"

                android:textColor="@color/mydarkblue" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>