<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mydarkblue"
        android:gravity="center"
        android:justificationMode="inter_word"
        android:paddingHorizontal="20dp"
        android:text="@string/dialog_macros_a"
        android:textColor="@color/mywhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/CarbsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_macros_carbs"
            android:textColor="@color/mydarkblue" />

        <TextView
            android:id="@+id/CarbsValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/none"
            android:textColor="@color/myorange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ProteinsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_macros_prot"
            android:textColor="@color/mydarkblue" />

        <TextView
            android:id="@+id/ProteinsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none"
            android:textColor="@color/myorange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/FatsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_macros_fats"
            android:textColor="@color/mydarkblue" />

        <TextView
            android:id="@+id/FatsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none"
            android:textColor="@color/myorange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/kcalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_macros_kcal"
            android:textColor="@color/mydarkblue" />

        <TextView
            android:id="@+id/kcalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none"
            android:textColor="@color/myorange" />
    </LinearLayout>

    <TextView
        android:id="@+id/QuestionAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:gravity="center"
        android:justificationMode="inter_word"
        android:text="@string/dialog_macros_c"
        android:textColor="@color/mydarkblue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/insertQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_macros_d"
        android:textColor="@color/mydarkblue" />

    <EditText
        android:id="@+id/prodQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30sp"
        android:autofillHints="100"
        android:backgroundTint="@color/myorange"
        android:hint="@string/ex_50"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/myorange" />

    <Button
        android:id="@+id/Done2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/myorange"
        android:text="@string/dialog_macros_done"
        android:textColor="@color/mywhite"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
