<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/mywhite"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/SportButton"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/mydarkblue"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/SportImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/map_button"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_baseline_map_24"
                app:tint="@color/mywhite" />

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:background="@android:color/transparent"
                android:justificationMode="inter_word"
                android:text="@string/content_button1"
                android:textColor="@color/mywhite" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/MacrosButton"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/mywhite"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/MacrosImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/macros_button"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_baseline_edit_24"
                app:tint="@color/myorange" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:background="@android:color/transparent"
                android:justificationMode="inter_word"
                android:text="@string/content_button2"
                android:textColor="@color/myorange" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ProfileButton"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/myorange"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/ProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/profile_button"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_baseline_account_circle_24"
                app:tint="@color/mywhite" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:background="@android:color/transparent"
                android:justificationMode="inter_word"
                android:text="@string/content_button3"
                android:textColor="@color/mywhite" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SavedButton"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/mywhite"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/SavedImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/saved_button"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_baseline_hiking_24"
                app:tint="@color/mydarkblue" />

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:background="@android:color/transparent"
                android:justificationMode="inter_word"
                android:text="@string/content_button4"
                android:textColor="@color/mydarkblue" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
