<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/mywhite"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/NewActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mydarkblue"
        android:gravity="center_horizontal"
        android:text="@string/new_goal"
        android:textColor="@color/mywhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="100"
        android:backgroundTint="@color/myorange"
        android:gravity="center_horizontal"
        android:hint="@string/ex_200"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:maxLines="1"
        android:textColorHint="@color/myorange"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/myorange"
        android:text="@string/new_macro_done"
        android:textColor="@color/mywhite"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>