<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/mywhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mydarkblue"
        android:gravity="center"
        android:text="@string/delete_dialog"
        android:textColor="@color/mywhite"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@color/myred"
            android:text="@string/yes_delete"
            android:textColor="@color/mywhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@color/mywhite"
            android:text="@string/no_cancel"
            android:textColor="@color/mydarkblue"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
